[tool.poetry]
name = "sat-report"
version = "0.1.0"
description = ""
authors = ["Brandon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
openpyxl = "^3.1.2"
matplotlib = "^3.8.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
